# M-Fuse-NYU-M1

./: .gitignore  LICENSE  README.md  prepare.sh  pyproject.toml  setup.py  train.py
src/: config.py  segsetup.py
src/late_fution_128.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/models/: late_fusion.py  unet.py  vit.py
src/utils/: augmentations.py  dataset.py  diceloss.py  evaluate.py  functions.py  graph.py  log.py  miou.py  normalize.py  preprocess.py  test.py  train.py  validate.py
test/: arch.py  benchmark.py  pipeline.py  prepare.py  preprocess.py
